--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -132,3 +132,9 @@
 	width: 100%;
 	height: 800;
 }
+.flex{ display: flex; width: 100%; margin: 0 auto; text-align: center; }
+.btn1{ display: flex; width: 100%; }
+
+.librosVistos{ overflow:scroll; width: 815px; height: 225px; }
+.contenedorLibros{ width: 1025px; }
+.linksReferencia{ display: flex; flex-direction: row; flex-flow: row; justify-content: center;}
